--- a/lab_project_razmattaz/templates/base.html
+++ b/lab_project_razmattaz/templates/base.html
@@ -4,7 +4,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Inventory Project</title>
+        <title>Forum Project</title>
         <meta name="description" content="">
         <link rel="stylesheet" href="{% static 'main.css' %}">
     </head>
