--- a/lab_project_razmattaz/templates/forum/post_detail.html
+++ b/lab_project_razmattaz/templates/forum/post_detail.html
@@ -1,14 +1,17 @@
 {% extends "base.html" %}
 
 {% block content %}
+    <a href="{% url 'index' %}"><p>Back to forum</p></a>
     <h3>{{post.title}}</h3>
     <p>{{post.text}}</p>
     <p>{{post.author}}</p>
     <p>{{post.date}}</p>
+    <a href="{% url 'comment_new' post.id %}">Create new Comment</a>
+    <h3>Comments</h3>
     <ul>
         {% for comment in comments%}
-            <h3>Comments</h3>
             <li>
+                <h4>{{comment.title}}</h4>
                 <p>{{comment.text}}</p>
                 <p>{{comment.author}}     {{comment.date}}</p>
             </li>
