--- a/lab_project_razmattaz/templates/forum/post_edit.html
+++ b/lab_project_razmattaz/templates/forum/post_edit.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
+   <a href="{% url 'index' %}"><p>Back to forum</p></a>
    <h1>New Post</h1>
    <form method="POST" class="post-form">{% csrf_token %}
        {{form.as_p}}
