--- a/lab_project_razmattaz/templates/badAnswer.html
+++ b/lab_project_razmattaz/templates/badAnswer.html
@@ -4,18 +4,14 @@
 <html>
     <head>
         <!--<meta charset="utf-8">-->
-        <title>{%block tittle %}{% endblock %}</title>
+        <title>Bad Answer</title>
         <!--<meta name="description" content="">-->
         <link href="{% static "css/base.css" %}" rel="stylesheet">
     </head>
     <body>
-        <div id="header">
-            <span class="logo">lab-project-razmatazz</span>
-        </div>
-        <div id="content">
-        {% block content %}
-        {% endblock %}
-        </div>
+            {% block content %}
+                <h1 class="title">Sorry but this was not a king s email</h1>
+            {% endblock %}
         <!--<script type="text/javascript" src="{% static 'main.js' %}"></script>-->
     </body>
 </html>
