Solve the deletion problem and move from httpsResponse to an html file to manipulate it , and addition of a button to link to the Authentification

--- a/lab_project_razmattaz/templates/forum/index.html
+++ b/lab_project_razmattaz/templates/forum/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-      <h1 class="title">{{user_name}} amazing skills</h1>
+      <h1 class="title">{{user_name}}</h1>
         <h3>Posts</h3>
 
     
