change to background colour

--- a/lab_project_razmattaz/templates/base.html
+++ b/lab_project_razmattaz/templates/base.html
@@ -3,12 +3,13 @@
 <!doctype html>
 <html>
     <head>
-        <meta charset="utf-8">
+        <meta charset="UTF-8">
         <title>Forum Project</title>
         <meta name="description" content="">
-        <link rel="stylesheet" href="{% static 'main.css' %}">
+        <link rel="stylesheet" href="{% static 'main.css' %}" type="text/css">
     </head>
     <body>
+        
         {% block content %}
         {% endblock content %}
         <script type="text/javascript" src="{% static 'main.js' %}"></script>
