Finished up majority of features

--- a/lab_project_razmattaz/templates/forum/badAnswer.html
+++ b/lab_project_razmattaz/templates/forum/badAnswer.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 <style>
-/*Shows the button to the desired place on the computer */
+/*displays the button at the correct place*/
 .button {
     background-color: #ff0000; /* red */
     border: none;
@@ -26,13 +26,13 @@
     bottom: 80%;
     right: 3%;
 }
-/*sets the format of the button to be of a certain font and of a certain angle*/
+/*makes the button be of a certain angle*/
 .buttonl {
     border-radius: 15px;
     font-size:30px!important;
     
 }
-/*aligns the text*/
+/*Sets the text to be correctly aligned*/
 .wrapper {
     text-align: center;
     vertical-align:middle;
@@ -43,13 +43,13 @@
   background-color: #999999;
 }
 
-/*This shows the first page to the user , so that he can sign in by getting redirected to the microsoft registration page*/
+/*this shows to the user that he did not use a kings email and that he should try to login again with a proper kcl.ac.uk email*/
 </style>
 </head>
 <body>
     <title>Kings Forum</title>
     <div class="topnav">
-      <h2>Kings Forum Sign In Page</h2>
+      <h2>Sorry you made a mistake try to log in with a kcl.ac.uk email</h2>
     </div>
     <img src="https://brockport.studioabroad.com/_customtags/ct_Image.cfm?Image_ID=11086" alt="Kings Banner" width="1904" height="845">
     <div class="wrapper">
